# asteroids

./: CMakeLists.txt  README.md  main.cpp
SDL2/: CMakeLists.txt
headers/: asteroid.h  bonus.h  bullet.h  game.h  game.h.orig  point.h  ship.h  ship.h.orig  vec2.h  weapon.h
images/: asteroide1.xcf
projet/headers/: ship.h
sources/: asteroid.cpp  bonus.cpp  bullet.cpp  game.cpp  point.cpp  print_string.cpp  ship.cpp  simplex.cpp  weapon.cpp
sources/entities/: entity.cpp  entity.h  ship.cpp
tp1/: tp1.cpp
